# Watcher

./: .gitignore  CMakeLists.txt  README.md
doc/: diary  matrix design.txt  module design.txt  web design.txt
include/: Backup.hpp  Data.hpp  File.hpp  FileBase.hpp  FileData.hpp  Gradient.hpp  Inspirer.hpp  Matrix.hpp  Mydef.hpp  Mytypedef.hpp  Vector.hpp  Web.hpp
src/: Backup.cpp  Data.cpp  FileBase.cpp  Gradient.cpp  Inspirer.cpp  Matrix.cpp  Web.cpp
src/main/: freset.cpp  learn.cpp  load.cpp  minist.cpp  test.cpp  watcher.cpp
trash can/src/: File.cpp
