cmake_minimum_required(VERSION 3.0)
project(Watcher)
set(CMAKE_CXX_STANDARD 20)
set(EXECUTABLE_OUTPUT_PATH ../bin)
include_directories(./include)
aux_source_directory(./src SRC_LIST)
add_executable(watcher ${SRC_LIST} ./src/main/watcher.cpp)
add_executable(test ${SRC_LIST} ./src/main/test.cpp)
