cmake_minimum_required(VERSION 3.0)
project(Watcher)
set(CMAKE_CXX_STANDARD 20)
set(EXECUTABLE_OUTPUT_PATH ../bin)
# 如果没有指定构建类型，默认设为 Release
# if(NOT CMAKE_BUILD_TYPE)
#     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
# endif()
include_directories(./include)
aux_source_directory(./src SRC_LIST)
# add_executable(watcher ${SRC_LIST} ./src/main/watcher.cpp)
# add_executable(test ${SRC_LIST} ./src/main/test.cpp)
add_executable(load ${SRC_LIST} ./src/main/load.cpp)
# add_executable(learn ${SRC_LIST} ./src/main/learn.cpp)
# add_executable(freset ${SRC_LIST} ./src/main/freset.cpp)
add_executable(minist ${SRC_LIST} ./src/main/minist.cpp)
message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")
message(STATUS "C++ compiler version: ${CMAKE_CXX_COMPILER_VERSION}")

